--- a/projects/demo/src/app/app.component.css
+++ b/projects/demo/src/app/app.component.css
@@ -76,24 +76,7 @@
     box-sizing: border-box;
   }
 
-  /* .file-input-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
-  
-  .file-preview {
-    margin-bottom: 12px
-  }
-  
-  .file-preview img {
-    max-width: 150px;
-    max-height: 150px;
-    object-fit: cover; 
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  } */
+  /* One File */
 
   .file-input-container {
     display: flex;
@@ -102,34 +85,45 @@
     width: 100%;
   }
   
-  .file-preview-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 12px;
-    margin-bottom: 12px;
-    justify-content: center;
+  .one-file-preview {
+    margin-bottom: 12px
   }
   
-  .file-preview {
-    position: relative;
-    display: inline-block;
-    max-width: 120px;
-    max-height: 120px;
-  }
-  
-  .file-preview img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  .one-file-preview img {
+    max-width: 150px;
+    max-height: 150px;
+    object-fit: cover; 
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
+
+  /* Multiple Files */
   
-  .file-preview button {
-    position: absolute;
-    top: 4px;
-    right: 4px;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 50%;
-    color: #333;
+  .file-preview {
+    width: 80px;
+    height: 80px;
+    object-fit: cover; 
+    border-radius: 8px;
+    margin-right: 10px;
+  }
+
+  .file-preview-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .file-info {
+    flex-grow: 1;
+  }
+
+  .clear-button {
+    margin-left: 10px;
+    cursor: pointer;
+  }
+
+  .file-name {
+    margin-top: 5px;
+    font-size: 12px;
+    color: #555;
   }
