feat: added unit testing

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -57,6 +57,7 @@
   <br />
   <form [formGroup]="demoForm">
     <div class="file-input-container">
+      <!-- Preview Optional -->
       <div class="one-file-preview" *ngIf="fileInput.previewUrls.length > 0">
         <img [src]="fileInput.previewUrls[0]" alt="Preview Image" />
       </div>
