feat: added duplicated check for files and refactor tests

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -9,151 +9,144 @@
   <div class="spacer"></div>
   <a
     aria-label="Angular on twitter"
-      target="_blank"
-      rel="noopener"
-      href="https://twitter.com/angular"
-      title="Twitter"
-      >
-      <svg
-        id="twitter-logo"
-        height="24"
-        data-name="Logo"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 400 400"
-        >
-        <rect width="400" height="400" fill="none" />
-        <path
-          d="M153.62,301.59c94.34,0,145.94-78.16,145.94-145.94,0-2.22,0-4.43-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.38,102.38,0,0,1-29.46,8.07,51.47,51.47,0,0,0,22.55-28.37,102.79,102.79,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.78A145.62,145.62,0,0,1,92.4,107.81a51.33,51.33,0,0,0,15.88,68.47A50.91,50.91,0,0,1,85,169.86c0,.21,0,.43,0,.65a51.31,51.31,0,0,0,41.15,50.28,51.21,51.21,0,0,1-23.16.88,51.35,51.35,0,0,0,47.92,35.62,102.92,102.92,0,0,1-63.7,22A104.41,104.41,0,0,1,75,278.55a145.21,145.21,0,0,0,78.62,23"
-          fill="#fff"
-          />
-        </svg>
-      </a>
-      <a
-        aria-label="Angular on YouTube"
-        target="_blank"
-        rel="noopener"
-        href="https://youtube.com/angular"
-        title="YouTube"
-        >
-        <svg
-          id="youtube-logo"
-          height="24"
-          width="24"
-          data-name="Logo"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="#fff"
-          >
-          <path d="M0 0h24v24H0V0z" fill="none" />
-          <path
-            d="M21.58 7.19c-.23-.86-.91-1.54-1.77-1.77C18.25 5 12 5 12 5s-6.25 0-7.81.42c-.86.23-1.54.91-1.77 1.77C2 8.75 2 12 2 12s0 3.25.42 4.81c.23.86.91 1.54 1.77 1.77C5.75 19 12 19 12 19s6.25 0 7.81-.42c.86-.23 1.54-.91 1.77-1.77C22 15.25 22 12 22 12s0-3.25-.42-4.81zM10 15V9l5.2 3-5.2 3z"
-            />
-          </svg>
-        </a>
+    target="_blank"
+    rel="noopener"
+    href="https://twitter.com/angular"
+    title="Twitter"
+  >
+    <svg
+      id="twitter-logo"
+      height="24"
+      data-name="Logo"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 400 400"
+    >
+      <rect width="400" height="400" fill="none" />
+      <path
+        d="M153.62,301.59c94.34,0,145.94-78.16,145.94-145.94,0-2.22,0-4.43-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.38,102.38,0,0,1-29.46,8.07,51.47,51.47,0,0,0,22.55-28.37,102.79,102.79,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.78A145.62,145.62,0,0,1,92.4,107.81a51.33,51.33,0,0,0,15.88,68.47A50.91,50.91,0,0,1,85,169.86c0,.21,0,.43,0,.65a51.31,51.31,0,0,0,41.15,50.28,51.21,51.21,0,0,1-23.16.88,51.35,51.35,0,0,0,47.92,35.62,102.92,102.92,0,0,1-63.7,22A104.41,104.41,0,0,1,75,278.55a145.21,145.21,0,0,0,78.62,23"
+        fill="#fff"
+      />
+    </svg>
+  </a>
+  <a
+    aria-label="Angular on YouTube"
+    target="_blank"
+    rel="noopener"
+    href="https://youtube.com/angular"
+    title="YouTube"
+  >
+    <svg
+      id="youtube-logo"
+      height="24"
+      width="24"
+      data-name="Logo"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="#fff"
+    >
+      <path d="M0 0h24v24H0V0z" fill="none" />
+      <path
+        d="M21.58 7.19c-.23-.86-.91-1.54-1.77-1.77C18.25 5 12 5 12 5s-6.25 0-7.81.42c-.86.23-1.54.91-1.77 1.77C2 8.75 2 12 2 12s0 3.25.42 4.81c.23.86.91 1.54 1.77 1.77C5.75 19 12 19 12 19s6.25 0 7.81-.42c.86-.23 1.54-.91 1.77-1.77C22 15.25 22 12 22 12s0-3.25-.42-4.81zM10 15V9l5.2 3-5.2 3z"
+      />
+    </svg>
+  </a>
+</div>
+
+<div class="content" role="main">
+  <h1>Content</h1>
+  <br />
+  <form [formGroup]="demoForm">
+    <div class="file-input-container">
+      <!-- Preview Optional -->
+      @if (fileInput.previewUrls.length > 0) {
+      <div class="one-file-preview">
+        <img [src]="fileInput.previewUrls[0]" alt="Preview Image" />
       </div>
+      }
+      <mat-form-field>
+        <mat-label>Basic input file</mat-label>
+        <ngx-mat-file-input
+          #fileInput
+          formControlName="basicfile"
+        ></ngx-mat-file-input>
+        @if (!fileInput.empty) {
+        <button mat-icon-button matSuffix (click)="fileInput.clear($event)">
+          <mat-icon>clear</mat-icon>
+        </button>
+        } @if (fileInput.empty) {
+        <mat-icon matSuffix>folder</mat-icon>
+        } @if (basicfile?.hasError('required')) {
+        <mat-error> Please select a file </mat-error>
+        } @if (basicfile?.hasError('maxContentSize')) {
+        <mat-error>
+          The total size must not exceed
+          {{ basicfile?.getError("maxContentSize").maxSize | byteFormat }}
+          ({{ basicfile?.getError("maxContentSize").actualSize | byteFormat }}).
+        </mat-error>
+        } @if (basicfile?.hasError('acceptedMimeTypes')) {
+        <mat-error>
+          <p>
+            Accepted MIME types:
+            {{ basicfile?.getError("acceptedMimeTypes").validTypes.join(", ") }}
+          </p>
+        </mat-error>
+        }
+      </mat-form-field>
+    </div>
+    <br />
+    <br />
 
-      <div class="content" role="main">
-        <h1>Content</h1>
-        <br />
-        <form [formGroup]="demoForm">
-          <div class="file-input-container">
-            <!-- Preview Optional -->
-            @if (fileInput.previewUrls.length > 0) {
-              <div class="one-file-preview">
-                <img [src]="fileInput.previewUrls[0]" alt="Preview Image" />
-              </div>
-            }
-            <mat-form-field>
-              <mat-label>Basic input file</mat-label>
-              <ngx-mat-file-input
-                #fileInput
-                formControlName="basicfile"
-              ></ngx-mat-file-input>
-              @if (!fileInput.empty) {
-                <button
-                  mat-icon-button
-                  matSuffix
-                  (click)="fileInput.clear($event)"
-                  >
-                  <mat-icon>clear</mat-icon>
-                </button>
-              }
-              @if (fileInput.empty) {
-                <mat-icon matSuffix>folder</mat-icon>
-              }
-              @if (basicfile?.hasError('required')) {
-                <mat-error>
-                  Please select a file
-                </mat-error>
-              }
-              @if (basicfile?.hasError('maxContentSize')) {
-                <mat-error>
-                  The total size must not exceed
-                  {{ basicfile?.getError("maxContentSize").maxSize | byteFormat }}
-                  ({{
-                  basicfile?.getError("maxContentSize").actualSize | byteFormat
-                  }}).
-                </mat-error>
-              }
-              @if (basicfile?.hasError('acceptedMimeTypes')) {
-                <mat-error>
-                  <p>Accepted MIME types: {{  basicfile?.getError("acceptedMimeTypes").validTypes.join(', ') }}</p>
-                </mat-error>
-              }
-            </mat-form-field>
-          </div>
-          <br>
-            <br>
+    <div class="file-input-container">
+      <mat-form-field>
+        <mat-label>Multiple input file</mat-label>
+        <ngx-mat-file-input
+          #multipleFileInput
+          formControlName="multiplefile"
+          checkDuplicates
+          multiple
+        ></ngx-mat-file-input>
+        @if (!multipleFileInput.empty) {
+        <button
+          mat-icon-button
+          matSuffix
+          (click)="multipleFileInput.clear($event)"
+        >
+          <mat-icon>clear</mat-icon>
+        </button>
+        } @if (multipleFileInput.empty) {
+        <mat-icon matSuffix>folder</mat-icon>
+        } @if (multiplefile?.hasError('minFileCount')) {
+        <mat-error> You need at least {{ minFiles }} uploaded file </mat-error>
+        } @if (multiplefile?.hasError('maxFileCount')) {
+        <mat-error> You can have max {{ maxFiles }} uploaded file </mat-error>
+        }
+      </mat-form-field>
+    </div>
 
-              <div class="file-input-container">
-                <mat-form-field>
-                  <mat-label>Multiple input file</mat-label>
-                  <ngx-mat-file-input
-                    #multipleFileInput
-                    formControlName="multiplefile"
-                    multiple
-                  ></ngx-mat-file-input>
-                  @if (!multipleFileInput.empty) {
-                    <button
-                      mat-icon-button
-                      matSuffix
-                      (click)="multipleFileInput.clear($event)"
-                      >
-                      <mat-icon>clear</mat-icon>
-                    </button>
-                  }
-                  @if (multipleFileInput.empty) {
-                    <mat-icon matSuffix>folder</mat-icon>
-                  }
-                  @if (multiplefile?.hasError('minFileCount')) {
-                    <mat-error>
-                      You need at least {{minFiles}} uploaded file
-                    </mat-error>
-                  }
-                  @if (multiplefile?.hasError('maxFileCount')) {
-                    <mat-error>
-                      You can have max {{maxFiles}} uploaded file
-                    </mat-error>
-                  }
-                </mat-form-field>
-              </div>
-
-              <!-- Preview Optional -->
-              @if (multipleFileInput.previewUrls.length > 0) {
-                <div class="previews-container">
-                  @for (previewUrl of multipleFileInput.previewUrls; track previewUrl; let i = $index) {
-                    <div class="file-preview-container">
-                      <img [src]="previewUrl" alt="File Preview" class="file-preview" />
-                      <div class="file-info">
-                        <p class="file-name">{{ multipleFileInput.value!.files[i].name }}</p>
-                      </div>
-                      <button mat-icon-button (click)="multipleFileInput.removeFile(i)" aria-label="Remove file">
-                        <mat-icon>close</mat-icon>
-                      </button>
-                    </div>
-                  }
-                </div>
-              }
-
-            </form>
-          </div>
+    <!-- Preview Optional -->
+    @if (multipleFileInput.previewUrls.length > 0) {
+    <div class="previews-container">
+      @for (file of multipleFileInput.value?.files; track trackFile($index,
+      file); let i = $index) {
+      <div class="file-preview-container">
+        <img
+          [src]="multipleFileInput.previewUrls[i]"
+          alt="File Preview"
+          class="file-preview"
+        />
+        <div class="file-info">
+          <p class="file-name">{{ file.name }}</p>
+        </div>
+        <button
+          mat-icon-button
+          (click)="multipleFileInput.removeFile(i)"
+          aria-label="Remove file"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
+      }
+    </div>
+    }
+  </form>
+</div>
